Fix: Background image is making the page too wide

--- a/styles/pages/_download.scss
+++ b/styles/pages/_download.scss
@@ -14,7 +14,8 @@
 		left: 0;
 		bottom: 0;
 
-		width: 933px;
+		width: 100%;
+		max-width: 933px;
 		height: 977px;
 		background: url('../img/bg-logo-watermark.svg') 0 0 no-repeat;
 		background-size: cover;
